Fixing wrapping in code blocks.

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -59,6 +59,8 @@ a {
 
 code, code[class*="language-"], pre[class*="language-"] {
   font-family: 'Inconsolata', monospace;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 :not(pre) > code {
